@@ -3,6 +3,11 @@
 	* libfuse: document deadlock avoidance for
 	fuse_notify_inval_entry() and fuse_notify_delete()
 
+	* fusermount, libfuse: send value as unsigned in "user_id=" and
+	"group_id=" options.  Uids/gids larger than 2147483647 would
+	result in EINVAL when mounting the filesystem.  This also needs a
+	fix in the kernel.
+
 2014-03-26  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Initilaize stat buffer passed to ->getattr() and ->fgetattr() to
